<resources>
    <string name="app_name">E-Supervisor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">AMPATH E-Supervisor</string>
    <string name="nav_header_subtitle">hello@ampath.or.ke</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">E-Supervisor</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_supervision">My supervisions</string>
    <string name="menu_report">Reports</string>
    <string name="menu_settings">Settings</string>
    <string name="add_supervision">addSupervision</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_program">Select program</string>
    <string name="purpose">Purpose of Supervision</string>
    <string name="purpose_hint">Reason for supervision</string>
    <string name="program_areas_supervised">Program/ Areas Supervised</string>
    <string name="start_supervision">start supervision</string>
    <string name="complete_supervision">Complete Supervision</string>
    <string name="submit">Submit</string>
    <string name="write_down">Write down</string>
    <string name="recommendation">Recommendation</string>
    <string name="finding">Findings</string>
    <string name="label_first_name">FirstName</string>
    <string name="label_surname">Surname</string>
    <string name="label_last_name">Lastname</string>
    <string name="designation">Designation</string>
    <string name="cancel">Cancel</string>
    <string name="create_supervisor">Add Supervisor</string>
    <string name="organisation">Organisation</string>
    <string name="recommender">Recommender</string>
    <string name="Recommendationbywho">Recommender\'s Name</string>
</resources>